err/env-diff.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/YORM-1.5.dist-info'...
Listing './lib/python3.5/site-packages/blindspin'...
Listing './lib/python3.5/site-packages/blindspin-2.0.1.egg-info'...
Listing './lib/python3.5/site-packages/click'...
Listing './lib/python3.5/site-packages/click-6.7.dist-info'...
Listing './lib/python3.5/site-packages/colorama'...
Listing './lib/python3.5/site-packages/colorama-0.3.9.dist-info'...
Listing './lib/python3.5/site-packages/crayons-0.1.2.egg-info'...
Listing './lib/python3.5/site-packages/delegator.py-0.0.8.dist-info'...
Listing './lib/python3.5/site-packages/env_diff-0.4.dist-info'...
Listing './lib/python3.5/site-packages/envdiff'...
Compiling './lib/python3.5/site-packages/envdiff/cli.py'...
***   File "./lib/python3.5/site-packages/envdiff/cli.py", line 32
    white(f"{config.path}", bold=True))
                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/envdiff/models.py'...
***   File "./lib/python3.5/site-packages/envdiff/models.py", line 36
    return f"<variable: {self}>"
                               ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/envdiff/tests'...
Compiling './lib/python3.5/site-packages/envdiff/utils.py'...
***   File "./lib/python3.5/site-packages/envdiff/utils.py", line 14
    log.info(f"Config file already exists: {config.path}")
                                                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/parse-1.8.2.egg-info'...
Listing './lib/python3.5/site-packages/pexpect'...
Listing './lib/python3.5/site-packages/pexpect-4.3.1.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/ptyprocess'...
Listing './lib/python3.5/site-packages/ptyprocess-0.5.2.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/simplejson'...
Listing './lib/python3.5/site-packages/simplejson/tests'...
Listing './lib/python3.5/site-packages/simplejson-3.13.2.egg-info'...
Listing './lib/python3.5/site-packages/tests'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './lib/python3.5/site-packages/yorm'...
Listing './lib/python3.5/site-packages/yorm/bases'...
Listing './lib/python3.5/site-packages/yorm/tests'...
Listing './lib/python3.5/site-packages/yorm/types'...
Listing './share'...
Listing './share/python-wheels'...
